--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -4,9 +4,9 @@ commit = True
 tag = True
 
 [bumpversion:file:schema_metadata.txt]
-search = "schema_version": "{current_version}"
-replace = "schema_version": "{new_version}"
+search = schema_version: {current_version}
+replace = schema_version: {new_version}
 
 [bumpversion:file:CompoiteStandard.py]
-search = "{current_version}"
-replace = "{new_version}"
+search = {current_version}
+replace = {new_version}
