--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -7,6 +7,6 @@ tag = True
 search = schema_version: {current_version}
 replace = schema_version: {new_version}
 
-[bumpversion:file:CompoiteStandard.py]
+[bumpversion:file:CompositeStandard.py]
 search = {current_version}
 replace = {new_version}
