--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -7,6 +7,10 @@ tag = True
 search = schema_version: {current_version}
 replace = schema_version: {new_version}
 
-[bumpversion:file:CompositeStandard.py]
+[bumpversion:file:CompoST/CompositeStandard.py]
 search = {current_version}
 replace = {new_version}
+
+[bumpversion:file:pyproject.toml]
+search = version = {current_version}
+replace = version = {new_version}
