--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -12,5 +12,5 @@ search = {current_version}
 replace = {new_version}
 
 [bumpversion:file:pyproject.toml]
-search = version = {current_version}
-replace = version = {new_version}
+search = version = "{current_version}"
+replace = version = "{new_version}"
