--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["flit_core >=3.2,<4"]
+requires = ["flit_core >=3.2,<4","pydantic>=2.6.4","numpy>=1.26.4","py-jsonic>=0.0.2"]
 build-backend = "flit_core.buildapi"
 
 [project]
