--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,4 +13,4 @@ version = "0.9.2"
 dependencies = ["pydantic>=2.6.4","numpy>=1.26.4","py-jsonic>=0.0.2"]
 
 [project.urls]
-Home = "https://github.com/National-Composites-Centre/CompoST"
+Home = "https://github.com/ncc-uk/CompoST"
